kubernetes/clusters/portland/apps/minecraft-server/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minecraft-server
  namespace: minecraft-server
  labels:
    app: minecraft-server
spec:
  replicas: 1
  serviceName: minecraft-server
  selector:
    matchLabels:
      app: minecraft-server
  template:
    metadata:
      labels:
        app: minecraft-server
    spec:
      containers:
        - name: mc
          image: itzg/minecraft-server
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /data
              name: data
          readinessProbe:
            exec:
              command:
                - mc-monitor
                - status
                - --host
                - localhost
                - --port
                - "25565"
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 18
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
