kubernetes/clusters/portland/apps/minecraft-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server-svc
  namespace: minecraft-server
  annotations:
    metallb.io/loadBalancerIPs: 192.168.7.70
  labels:
    service: minecraft-server
spec:
  ports:
    - port: 25565
      targetPort: 25565
  selector:
    app: minecraft-server
  type: LoadBalancer
